# csgo-matchbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
migrations/: 20220912024654_initial.sql  20230312174738_tournament.sql  20230312200327_captain-typo-fix.sql  20230312223546_teams-unique-constraint-drop.sql
migrations/2022-07-17-012156_create_users/: down.sql  up.sql
migrations/2022-07-17-030153_create_matches/: down.sql  up.sql
migrations/2022-07-18-223726_create_maps/: down.sql  up.sql
migrations/2022-08-11-214426_match_servers/: down.sql  up.sql
migrations/2022-08-13-012129_gslt_tokens/: down.sql  up.sql
postgres/: 00-enable-pguint.sql  Containerfile
src/: commands.rs  dathost_models.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/commands/: admin.rs  maps.rs  matches.rs  mod.rs  setup.rs  steamid.rs  team.rs
