[package]
name = "matchbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
dotenvy = "*"
env_logger = "*"
futures = "*"
log = "*"
serenity = { version = "*", default-features = false, features = ["rustls_backend", "utils", "model"] }
paste = "*"
poise = { version = "*", default-features = false, features = ["cache", "collector", "time"] }
serde = { version = "*", default-features = false, features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls", "pguint"] }
tokio = { version = "*", features = ["full"] }

[patch.crates-io]
sqlx = { path = "../../sqlx/pguint" }
