[package]
name = "csgo-matchbot"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
reqwest = "0.11.11"
urlencoding = "2.1.2"
steamid = { git = "https://github.com/JohnPeel/steamid" }
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "utils", "model"] }
paste = "1.0.9"
poise = { version = "0.5.1", default-features = false, features = ["collector", "time"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls", "offline"] }
tokio = { version = "1.23.0", features = ["full"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
